# omni-meeting-recorder

./: .gitignore  CHANGELOG.md  Makefile  README.ja.md  README.md  omr.spec  pyproject.toml
.github/workflows/: ci.yml
scripts/: build-portable.py
src/omr/: __init__.py
src/omr/backends/: wasapi.py
src/omr/cli/: main.py
src/omr/cli/commands/: config.py  devices.py  record.py
src/omr/config/: settings.py
src/omr/core/: aec_processor.py  audio_capture.py  device_manager.py  encoder.py  input_handler.py  mixer.py
stubs/: pyaec.pyi
tests/: conftest.py  test_aec_processor.py  test_cli.py  test_device_disconnect.py  test_device_errors.py  test_device_manager.py  test_device_switching.py  test_encoder.py  test_input_handler.py  test_mixer.py  test_settings.py  test_user_config.py
